objects/vlocity_cmt__AsyncProcessManager__e.object
<CustomObject>
    <description>Controls the progress of the Async Process.</description>
    <fields>
        <fullName>vlocity_cmt__AdditionalData__c</fullName>
        <description>Additional data for all Custom Processes (JSON).</description>
        <label>Additional Data</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__AsyncProcessId__c</fullName>
        <description>ID of the Async Process record.</description>
        <label>Async Process</label>
        <length>18</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__AsyncProcessStepId__c</fullName>
        <description>ID of the Async Process Step record.</description>
        <label>Async Process Step</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__AsyncProcessSteps__c</fullName>
        <description>Async process details and steps definition (JSON).</description>
        <label>Async Process Steps</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__AsyncStepProgress__c</fullName>
        <description>Controls the Async Process execution (state machine).</description>
        <label>Async Step Progress</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__ItemsToProcessList__c</fullName>
        <description>List of the Items to be processed.</description>
        <label>Items To Process List</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__Status__c</fullName>
        <description>Status of the process executed.</description>
        <label>Status</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__StepNumber__c</fullName>
        <description>step number of the Async Process Step.</description>
        <label>Step Number</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Async Process Manager</label>
    <pluralLabel>Async Process Managers</pluralLabel>
</CustomObject>